--- a/index.html
+++ b/index.html
@@ -36,5 +36,24 @@
         <li>Metodo</li>
         <li>Atributo</li>
     </ol>
+
+    <h2>Tablas</h2>
+        <table>
+            <tr>
+                <th>No. Cuenta</th>
+                <th>Nombre</th>
+                <th>Correo</th>
+            </tr>
+            <tr>
+                <td>2010-98434</td>
+                <td>Juan Perez</td>
+                <td>Juan.perez@gmail.com</td>
+            </tr>
+            <tr>
+                <td>2010-47634</td>
+                <td>Maria Rodriguez</td>
+                <td>Maria.rodriguez@gmail.com</td>
+            </tr>
+        </table>
 </body>
 </html>
