--- a/index.html
+++ b/index.html
@@ -55,5 +55,23 @@
                 <td>Maria.rodriguez@gmail.com</td>
             </tr>
         </table>
+    <h2>Formularios</h2>
+    <form>
+        <div>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre"/>
+        </div>
+        <div>
+                <label for="email">Correo:</label>
+                <input type="email" id="email"/>
+        </div>
+        <div>
+                <label for="fnacimiento">Fecha De Nacimiento:</label>
+                <input type="date" id="fnacimiento"/>
+        </div>
+        <div>
+            <button type="submit">Enviar</button>
+        </div>
+    </form>
 </body>
 </html>
